feat: create card 1

--- a/index.html
+++ b/index.html
@@ -3,16 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício Bootstrap & Animate.css</title>
-    <link rel="stylesheet" href="assets/style.index.css">
-    <!-- Bootstrap.css -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>Cards de Cachorrinhos</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Animate.css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/style.index.css">/
 </head>
 <body>
     <div class="container">
         <div class="card1">
+            <div class="col-md-4 mb-4">
+                <div class="card profile">
+                    <div class="cardy-body">
+                        <img src="img/golden.jpg" alt="goden filhote piscando o olho">
+                        <h5 class="card-title">paçoca</h5>
+                        <p class="text-description">Golden Retriver | 2 anos</p>
+                        <button class="btn btn-primary">Adotar agora</button>
+                        <div class="justify-content">
+                            <p class="mx-2">30kg <br><small>Peso</small></p>
+                            <p class="mx-2">Amigável e dócil <br><small>Personalidade</small></p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             
         </div>
