--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="card1">
             <div class="col-md-4 mb-4">
-                <div class="card profile">
+                <div class="card-profile">
                     <div class="cardy-body">
                         <img src="img/golden.jpg" alt="goden filhote piscando o olho">
                         <h5 class="card-title">paçoca</h5>
@@ -23,12 +23,15 @@
                         <div class="justify-content">
                             <p class="mx-2">30kg <br><small>Peso</small></p>
                             <p class="mx-2">Amigável e dócil <br><small>Personalidade</small></p>
-
                         </div>
                     </div>
                 </div>
             </div>
 
+            <div class="col-md-4 mb-4">
+                
+
+            </div>
             
         </div>
     </div>
