--- a/index.html
+++ b/index.html
@@ -3,37 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.index.css">
     <title>Cards de Cachorrinhos</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Animate.css -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style.index.css">/
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body>
-    <div class="container">
-        <div class="card1">
-            <div class="col-md-4 mb-4">
-                <div class="card-profile">
-                    <div class="cardy-body">
-                        <img src="img/golden.jpg" alt="goden filhote piscando o olho">
-                        <h5 class="card-title">paçoca</h5>
-                        <p class="text-description">Golden Retriver | 2 anos</p>
-                        <button class="btn btn-primary">Adotar agora</button>
-                        <div class="justify-content">
-                            <p class="mx-2">30kg <br><small>Peso</small></p>
-                            <p class="mx-2">Amigável e dócil <br><small>Personalidade</small></p>
-                        </div>
+    <div class="container d-flex flex-wrap justify-content-center">
+        <div class="col">
+            <div class="card custom-card">
+                <div class="card-header text-center">
+                        <img src="img/golden.jpg" alt="golden filhote piscando o olho">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </div>
+                    <div class="card-footer text-center">
+                        <i class="fab fa-facebook-f mx-2"></i>
+                        <i class="fab fa-instagram mx-2"></i>
+                        <i class="fab fa-whatsapp mx-2"></i>
                     </div>
                 </div>
             </div>
-
-            <div class="col-md-4 mb-4">
-                
-
-            </div>
-            
-        </div>
-    </div>
+            <div class=""
 </body>
 </html>
