feat: create button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                         <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            
+                        <button class="btn btn-primary">Adote agora!</button>
                     </div>
                     <div class="card-footer text-center">
                         <i class="fab fa-facebook-f mx-2"></i>
@@ -28,6 +30,21 @@
                     </div>
                 </div>
             </div>
-            <div class=""
+            <div class="col">
+                <div class="card custom-card">
+                    <div class="card-header text-center">
+                        <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </div>
+                    <div class="card-footer text-center">
+                        <i class="fab fa-facebook-f mx-2"></i>
+                        <i class="fab fa-instagram mx-2"></i>
+                        <i class="fab fa-whatsapp mx-2"></i>
+                    </div>
+            </div>
 </body>
 </html>
