--- a/index.html
+++ b/index.html
@@ -45,6 +45,83 @@
                         <i class="fab fa-instagram mx-2"></i>
                         <i class="fab fa-whatsapp mx-2"></i>
                     </div>
+                </div>
             </div>
+
+                <div class="col">
+                    <div class="card custom-card">
+                        <div class="card-header text-center">
+                            <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </div>
+                <div class="card-footer text-center">
+                    <i class="fab fa-facebook-f mx-2"></i>
+                    <i class="fab fa-instagram mx-2"></i>
+                    <i class="fab fa-whatsapp mx-2"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container d-flex flex-wrap justify-content-center">
+        <div class="col">
+            <div class="card custom-card">
+                <div class="card-header text-center">
+                    <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty">
+                </div>
+                <div class="card-body">
+                    <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </div>
+                <div class="card-footer text-center">
+                    <i class="fab fa-facebook-f mx-2"></i>
+                    <i class="fab fa-instagram mx-2"></i>
+                    <i class="fab fa-whatsapp mx-2"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card custom-card">
+                <div class="card-header text-center">
+                    <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty">
+                </div>
+                <div class="card-body">
+                    <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </div>
+                <div class="card-footer text-center">
+                    <i class="fab fa-facebook-f mx-2"></i>
+                    <i class="fab fa-instagram mx-2"></i>
+                    <i class="fab fa-whatsapp mx-2"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card custom-card">
+                <div class="card-header text-center">
+                    <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty">
+                </div>
+                <div class="card-body">
+                    <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </div>
+                <div class="card-footer text-center">
+                    <i class="fab fa-facebook-f mx-2"></i>
+                    <i class="fab fa-instagram mx-2"></i>
+                    <i class="fab fa-whatsapp mx-2"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
