--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,6 +30,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="col">
                 <div class="card custom-card">
                     <div class="card-header text-center">
@@ -39,6 +40,7 @@
                         <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            <button class="btn btn-primary">Adote agora!</button>
                     </div>
                     <div class="card-footer text-center">
                         <i class="fab fa-facebook-f mx-2"></i>
@@ -52,11 +54,13 @@
                     <div class="card custom-card">
                         <div class="card-header text-center">
                             <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty">
+                            
                     </div>
                     <div class="card-body">
                         <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            <button class="btn btn-primary">Adote agora!</button>
                 </div>
                 <div class="card-footer text-center">
                     <i class="fab fa-facebook-f mx-2"></i>
@@ -76,6 +80,7 @@
                     <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
                     <p class="card-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        <button class="btn btn-primary">Adote agora!</button>
                 </div>
                 <div class="card-footer text-center">
                     <i class="fab fa-facebook-f mx-2"></i>
@@ -94,6 +99,7 @@
                     <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
                     <p class="card-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        <button class="btn btn-primary">Adote agora!</button>
                 </div>
                 <div class="card-footer text-center">
                     <i class="fab fa-facebook-f mx-2"></i>
@@ -112,6 +118,7 @@
                     <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
                     <p class="card-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        <button class="btn btn-primary">Adote agora!</button>
                 </div>
                 <div class="card-footer text-center">
                     <i class="fab fa-facebook-f mx-2"></i>
@@ -121,7 +128,11 @@
                 </div>
             </div>
         </div>
+    </div>
+
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
+
 </html>
+```
