fix: atualização no nome dos cachorros

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty">
                     </div>
                     <div class="card-body">
-                        <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
+                        <h5 class="animate__animated animate__flip card-title">Cavalier King Charles Spaniel</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             <button class="btn btn-primary">Adote agora!</button>
@@ -57,7 +57,7 @@
                             
                     </div>
                     <div class="card-body">
-                        <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
+                        <h5 class="animate__animated animate__flip card-title">Shih Tzu</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             <button class="btn btn-primary">Adote agora!</button>
@@ -77,7 +77,7 @@
                     <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty">
                 </div>
                 <div class="card-body">
-                    <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
+                    <h5 class="animate__animated animate__flip card-title">Lulu da Pomerânia</h5>
                     <p class="card-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         <button class="btn btn-primary">Adote agora!</button>
@@ -96,7 +96,7 @@
                     <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty">
                 </div>
                 <div class="card-body">
-                    <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
+                    <h5 class="animate__animated animate__flip card-title">Yorkshire</h5>
                     <p class="card-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         <button class="btn btn-primary">Adote agora!</button>
@@ -115,7 +115,7 @@
                     <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty">
                 </div>
                 <div class="card-body">
-                    <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
+                    <h5 class="animate__animated animate__flip card-title">Dachshund</h5>
                     <p class="card-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         <button class="btn btn-primary">Adote agora!</button>
