update index.html (descrição dos cachorros)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="card-body">
                         <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            7 anos: Amigável e cheio de energia, é muito sociável e ideal para famílias.
                             
                         <button class="btn btn-primary">Adote agora!</button>
                     </div>
@@ -39,7 +39,7 @@
                     <div class="card-body">
                         <h5 class="animate__animated animate__flip card-title">Cavalier King Charles Spaniel</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            13 anos: Doce e afetuoso, é tranquilo e muito ligado aos donos.
                             <button class="btn btn-primary">Adote agora!</button>
                     </div>
                     <div class="card-footer text-center">
@@ -59,7 +59,7 @@
                     <div class="card-body">
                         <h5 class="animate__animated animate__flip card-title">Shih Tzu</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            7 anos: Carinhoso e leal, adora a companhia dos tutores e é calmo dentro de casa.
                             <button class="btn btn-primary">Adote agora!</button>
                 </div>
                 <div class="card-footer text-center">
@@ -79,7 +79,7 @@
                 <div class="card-body">
                     <h5 class="animate__animated animate__flip card-title">Lulu da Pomerânia</h5>
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        9 anos: Animado e curioso, é sempre atento e adora brincar, apesar do tamanho pequeno.
                         <button class="btn btn-primary">Adote agora!</button>
                 </div>
                 <div class="card-footer text-center">
@@ -98,7 +98,7 @@
                 <div class="card-body">
                     <h5 class="animate__animated animate__flip card-title">Yorkshire</h5>
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        3 anos: Independente e corajoso, tem um espírito de explorador e se adapta bem a espaços pequenos.
                         <button class="btn btn-primary">Adote agora!</button>
                 </div>
                 <div class="card-footer text-center">
@@ -117,7 +117,7 @@
                 <div class="card-body">
                     <h5 class="animate__animated animate__flip card-title">Dachshund</h5>
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        18 anos: Teimoso e protetor, é aventureiro e não hesita em defender seu espaço.
                         <button class="btn btn-primary">Adote agora!</button>
                 </div>
                 <div class="card-footer text-center">
