--- a/index.html
+++ b/index.html
@@ -9,130 +9,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
-<body>
-    <div class="container d-flex flex-wrap justify-content-center">
-        <div class="col">
-            <div class="card custom-card">
-                <div class="card-header text-center">
-                        <img src="img/golden.jpg" alt="golden filhote piscando o olho">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="animate__animated animate__flip card-title">Golden Filhote</h5>
-                        <p class="card-text">
-                            7 anos: Amigável e cheio de energia, é muito sociável e ideal para famílias.
-                            
-                        <button class="btn btn-primary">Adote agora!</button>
-                    </div>
-                    <div class="card-footer text-center">
-                        <i class="fab fa-facebook-f mx-2"></i>
-                        <i class="fab fa-instagram mx-2"></i>
-                        <i class="fab fa-whatsapp mx-2"></i>
-                    </div>
-                </div>
-            </div>
-
+<body class="bg-light-v">
+    <div class="container py-5">
+        <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
             <div class="col">
-                <div class="card custom-card">
-                    <div class="card-header text-center">
-                        <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="animate__animated animate__flip card-title">Cavalier King Charles Spaniel</h5>
-                        <p class="card-text">
-                            13 anos: Doce e afetuoso, é tranquilo e muito ligado aos donos.
-                            <button class="btn btn-primary">Adote agora!</button>
-                    </div>
-                    <div class="card-footer text-center">
-                        <i class="fab fa-facebook-f mx-2"></i>
-                        <i class="fab fa-instagram mx-2"></i>
-                        <i class="fab fa-whatsapp mx-2"></i>
-                    </div>
-                </div>
-            </div>
-
-                <div class="col">
-                    <div class="card custom-card">
-                        <div class="card-header text-center">
-                            <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty">
-                            
-                    </div>
-                    <div class="card-body">
-                        <h5 class="animate__animated animate__flip card-title">Shih Tzu</h5>
-                        <p class="card-text">
-                            7 anos: Carinhoso e leal, adora a companhia dos tutores e é calmo dentro de casa.
-                            <button class="btn btn-primary">Adote agora!</button>
-                </div>
-                <div class="card-footer text-center">
-                    <i class="fab fa-facebook-f mx-2"></i>
-                    <i class="fab fa-instagram mx-2"></i>
-                    <i class="fab fa-whatsapp mx-2"></i>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container d-flex flex-wrap justify-content-center">
-        <div class="col">
-            <div class="card custom-card">
-                <div class="card-header text-center">
-                    <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty">
-                </div>
-                <div class="card-body">
-                    <h5 class="animate__animated animate__flip card-title">Lulu da Pomerânia</h5>
-                    <p class="card-text">
-                        9 anos: Animado e curioso, é sempre atento e adora brincar, apesar do tamanho pequeno.
+                <div class="card animate__animated animate__fadeIn animate__bounce">
+                    <img src="./img/golden.jpg" class="card-img-top" alt="Jogador 1">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Golden retriever</h5>
+                        <p class="card-text">Nome: Paçoca</p>
+                        <p class="card-text">Idade: 2 anos</p>
+                        <p class="card-text">Sexo: Macho</p>
+                        <p class="card-text">Personalidade: Afável, Inteligente, Amigável, Confiável, Fiel, Confiante</p>
+                        <p class="card-text">Expectativa de vida: de 10 a 12 anos</p>
                         <button class="btn btn-primary">Adote agora!</button>
-                </div>
-                <div class="card-footer text-center">
-                    <i class="fab fa-facebook-f mx-2"></i>
-                    <i class="fab fa-instagram mx-2"></i>
-                    <i class="fab fa-whatsapp mx-2"></i>
-                </div>
-            </div>
-        </div>
-
-        <div class="col">
-            <div class="card custom-card">
-                <div class="card-header text-center">
-                    <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty">
-                </div>
-                <div class="card-body">
-                    <h5 class="animate__animated animate__flip card-title">Yorkshire</h5>
-                    <p class="card-text">
-                        3 anos: Independente e corajoso, tem um espírito de explorador e se adapta bem a espaços pequenos.
-                        <button class="btn btn-primary">Adote agora!</button>
-                </div>
-                <div class="card-footer text-center">
-                    <i class="fab fa-facebook-f mx-2"></i>
-                    <i class="fab fa-instagram mx-2"></i>
-                    <i class="fab fa-whatsapp mx-2"></i>
-                </div>
-            </div>
-        </div>
-
-        <div class="col">
-            <div class="card custom-card">
-                <div class="card-header text-center">
-                    <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty">
-                </div>
-                <div class="card-body">
-                    <h5 class="animate__animated animate__flip card-title">Dachshund</h5>
-                    <p class="card-text">
-                        18 anos: Teimoso e protetor, é aventureiro e não hesita em defender seu espaço.
-                        <button class="btn btn-primary">Adote agora!</button>
-                </div>
-                <div class="card-footer text-center">
-                    <i class="fab fa-facebook-f mx-2"></i>
-                    <i class="fab fa-instagram mx-2"></i>
-                    <i class="fab fa-whatsapp mx-2"></i>
+                        <div class="card-footer text-center">
+                            <i class="fab fa-facebook-f mx-2"></i>
+                            <i class="fab fa-instagram mx-2"></i>
+                            <i class="fab fa-whatsapp mx-2"></i>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
-```
