--- a/index.html
+++ b/index.html
@@ -6,31 +6,52 @@
     <link rel="stylesheet" href="assets/style.index.css">
     <title>Cards de Cachorrinhos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-</head>
-<body class="bg-light-v">
-    <div class="container py-5">
-        <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
-            <div class="col">
-                <div class="card animate__animated animate__fadeIn animate__bounce">
-                    <img src="./img/golden.jpg" class="card-img-top" alt="Jogador 1">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Golden retriever</h5>
-                        <p class="card-text">Nome: Paçoca</p>
-                        <p class="card-text">Idade: 2 anos</p>
+    </head>
+<body>
+    <div class="container d-flex flex-wrap justify-content-center">
+        <div class="col">
+            <div class="card custom-card">
+                <div class="card-header text-center">
+                        <img src="img/golden.jpg" alt="golden filhote piscando o olho" class="rounded-circle avatar">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="animate_animated animate_flip card-title">Golden Filhote</h5>
+                        <p class="card-text"> Idade: 2 anos</p>
                         <p class="card-text">Sexo: Macho</p>
                         <p class="card-text">Personalidade: Afável, Inteligente, Amigável, Confiável, Fiel, Confiante</p>
                         <p class="card-text">Expectativa de vida: de 10 a 12 anos</p>
                         <button class="btn btn-primary">Adote agora!</button>
-                        <div class="card-footer text-center">
-                            <i class="fab fa-facebook-f mx-2"></i>
-                            <i class="fab fa-instagram mx-2"></i>
-                            <i class="fab fa-whatsapp mx-2"></i>
-                        </div>
+                    </div>
+                    <div class="card-footer text-center">
+                        <i class="fab fa-facebook-f mx-2"></i>
+                        <i class="fab fa-instagram mx-2"></i>
+                        <i class="fab fa-whatsapp mx-2"></i>
                     </div>
                 </div>
             </div>
+        <div class="col">
+            <div class="card custom-card">
+                <div class="card-header text-center">
+                    <img src="img/cachorrinhoLiberty.jpg" alt="cachorrinho liberty" class="rounded-circle avatar">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="animate_animated animate_flip card-title">Cavalier King Charles Spaniel</h5>
+                        <p class="card-text"> Idade: 2 anos</p>
+                        <p class="card-text">Sexo: Masculino</p>
+                        <p class="card-text">Personalidade: Amigável, Curioso, Independente, Energético, Orgulhoso, Curioso</p>
+                        <p class="card-text">Expectativa de vida: de 10 a 12 anos</p>
+                        <button class="btn btn-primary">Adote agora!</button>
+                    </div>
+                    <div class="card-footer text-center">
+                        <i class="fab fa-facebook-f mx-2"></i>
+                        <i class="fab fa-instagram mx-2"></i>
+                        <i class="fab fa-whatsapp mx-2"></i>
+            </div>
+        </div>
+    </div>
+    
 </body>
 
 </html>
