feat: criação do card 3 e 4

--- a/index.html
+++ b/index.html
@@ -51,6 +51,47 @@
             </div>
         </div>
     </div>
+
+    <div class="col">
+        <div class="card custom-card">
+            <div class="card-header text-center">
+                <img src="img/Beagle cachorrinho.jpg" alt="beagle cachorrinho" class="rounded-circle avatar">
+                </div>
+                <div class="card-body">
+                    <h5 class="animate_animated animate_flip card-title">Beagle</h5>
+                    <p class="card-text"> Idade: 4 anos</p>
+                    <p class="card-text">Sexo: Fêmea</p>
+                    <p class="card-text">Personalidade: Amigável, Independente, Corajoso, Feliz, Curioso, Gentil</p>
+                    <p class="card-text">Expectativa de vida: de 12 a 15 anos</p>
+                    <button class="btn btn-primary">Adote agora!</button>
+                </div>
+                <div class="card-footer text-center">
+                    <i class="fab fa-facebook-f mx-2"></i>
+                    <i class="fab fa-instagram mx-2"></i>
+                    <i class="fab fa-whatsapp mx-2"></i>
+                </div>
+            </div>
+        </div>       
+        
+        <div class="col">
+            <div class="card custom-card">
+                <div class="card-header text-center">
+                    <img src="img/Lulu da Pomerânia.jpg" alt="cachorrinho Lulu da Pomerânia" class="rounded-circle avatar">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="animate_animated animate_flip card-title">Lulu da Pomerânia</h5>
+                        <p class="card-text"> Idade: 2 anos</p>
+                        <p class="card-text">Sexo: Masculino</p>
+                        <p class="card-text">Personalidade: Amigável, Curioso, Independente, Energético, Orgulhoso, Curioso</p>
+                        <p class="card-text">Expectativa de vida: de 10 a 12 anos</p>
+                        <button class="btn btn-primary">Adote agora!</button>
+                    </div>
+                    <div class="card-footer text-center">
+                        <i class="fab fa-facebook-f mx-2"></i>
+                        <i class="fab fa-instagram mx-2"></i>                        
+                    </div>                    
+                </div>
+            </div>
     
 </body>
 
