feat: create card 3 e 4

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     <div class="card-body">
                         <h5 class="animate_animated animate_flip card-title">Cavalier King Charles Spaniel</h5>
                         <p class="card-text"> Idade: 2 anos</p>
-                        <p class="card-text">Sexo: Masculino</p>
-                        <p class="card-text">Personalidade: Amigável, Curioso, Independente, Energético, Orgulhoso, Curioso</p>
-                        <p class="card-text">Expectativa de vida: de 10 a 12 anos</p>
+                        <p class="card-text">Sexo: Fêmea</p>
+                        <p class="card-text">Personalidade: Afetuosa, Sociável, Gentil, Paciente, Adaptável, Graceful</p>
+                        <p class="card-text">Expectativa de vida: de 09 a 14 anos</p>
                         <button class="btn btn-primary">Adote agora!</button>
                     </div>
                     <div class="card-footer text-center">
@@ -82,8 +82,8 @@
                         <h5 class="animate_animated animate_flip card-title">Lulu da Pomerânia</h5>
                         <p class="card-text"> Idade: 2 anos</p>
                         <p class="card-text">Sexo: Masculino</p>
-                        <p class="card-text">Personalidade: Amigável, Curioso, Independente, Energético, Orgulhoso, Curioso</p>
-                        <p class="card-text">Expectativa de vida: de 10 a 12 anos</p>
+                        <p class="card-text">Personalidade: Amigável, Curioso, Independente, Energético, Curioso</p>
+                        <p class="card-text">Expectativa de vida: de 12 a 16 anos</p>
                         <button class="btn btn-primary">Adote agora!</button>
                     </div>
                     <div class="card-footer text-center">
