--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Cards de Cachorrinhos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
     </head>
 <body>
@@ -82,7 +83,7 @@
                         <h5 class="animate_animated animate_flip card-title">Lulu da Pomerânia</h5>
                         <p class="card-text"> Idade: 2 anos</p>
                         <p class="card-text">Sexo: Masculino</p>
-                        <p class="card-text">Personalidade: Amigável, Curioso, Independente, Energético, Curioso</p>
+                        <p class="card-text">Personalidade: Amigável, Independente, Energético, Curioso</p>
                         <p class="card-text">Expectativa de vida: de 12 a 16 anos</p>
                         <button class="btn btn-primary">Adote agora!</button>
                     </div>
@@ -135,7 +136,5 @@
                         </div>                    
                     </div>
                 </div>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
-</body>
-</html>
+            </body>
+            </html>
